--- a/KrysiaBartek2024/source/1mOpening.tex
+++ b/KrysiaBartek2024/source/1mOpening.tex
@@ -20,7 +20,7 @@
     \item 1\hearts\ = 4+\hearts
     \item 1\spades\ = 4+\spades
     \item 1\ntx\ = 7-10, no 4\majs
-    \item 2\clubs\ = 12-14 \bal or \clubs, \gf
+    \item 2\clubs\ = \gf: \bal or \clubs
     \item 2\diams\ = 5+\diams, \gf, may have 4\majs
     \item 2\hearts\ = 5\spades4\hearts\ 6-9
     \item 2\spades\ = 11+ \bal, no 4\majs
@@ -48,6 +48,17 @@
     \item 2\spades\ = 5\clubs4\spades\ \unbal
     \item 2\nt\ = 5\clubs4\diams\ \unbal
     \item 3\clubs\ = \clubs\ \unbal
+\end{itemize}
+
+\subsubsection*{1\clubs\ -- 2\clubs \\
+                2\diams -- ?}
+\begin{itemize}
+    \item 2\hearts = 5\clubs4\hearts\ \unbal
+    \item 2\spades = 5\clubs4\spades\ \unbal
+    \item 2\nt = 12-14/18+ \bal
+    \item 3\clubs = 6\clubs, no 4\major
+    \item 3\diams = 5\clubs4\diams, \gf
+    \item 3\nt = 15-17 \bal
 \end{itemize}
 
 \subsubsection*{1\diams\ -- 2\diams \\ ?}
