--- a/KrysiaBartek2024/source/acolKokish.tex
+++ b/KrysiaBartek2024/source/acolKokish.tex
@@ -24,27 +24,16 @@
                 2\hearts -- 2\spades \\ ?}
 \begin{itemize}
     \item 2\nt = 25+, \bal
-    \item 3\clubs = 6\hearts, 23+
-    \item 3\diams = 5\hearts+4\diams, 23+
-    \item 3\hearts = 5\hearts+4\clubs, 23+
-    \item 3\spades = 5\hearts+4\spades, 23+
+    \item 3\clubs = 5\hearts+4\diams, 23+
+    \item 3\diams = 6\hearts, 23+
+    \item 3\hearts = 5\hearts+4\spades, 23+
+    \item 3\spades = 5\hearts+4\clubs, 23+
 \end{itemize}
 
 \subsubsection*{2\clubs\ -- 2\diams \\ 
                 2\hearts -- 2\spades \\
                 2\nt -- ?}
 \textsc{system on}
-
-\subsubsection*{2\clubs\ -- 2\diams \\ 
-                2\hearts -- 2\spades \\
-                3\spades -- ?}
-\begin{itemize}
-    \item 3\nt = no fit, to play
-    \item 4\clubs = agreeing \hearts
-    \item 4\diams = agreeing \spades
-    \item 4\hearts = sign off
-    \item 4\spades = sign off
-\end{itemize}
 
 %%% SYSTEM END %%%
 
