--- a/KrysiaBartek2024/source/askLSFinterference.tex
+++ b/KrysiaBartek2024/source/askLSFinterference.tex
@@ -16,26 +16,17 @@
 
 \subsubsection*{...\\{\color{WildStrawberry}\textbf{ASK}\color{black}} -- (\anysuit{\textbullet}) -- ?}
 \begin{itemize}
-    \item \pass = no shortness (all \dbl = penalty)
-    \item \dbl = shortness in \anysuit{\textbullet}
+    \item \dbl = no shortness
+    \item \pass = shortness in \anysuit{\textbullet}
     \item other suit = shortness in this suit
     \item agreed suit = other shortness (if there is no place to bid it)
 \end{itemize}
 
 \subsubsection*{...\\{\color{WildStrawberry}\textbf{ASK}\color{black}} -- (\dbl) -- ?}
-\dbl = lead directing
 \begin{itemize}
-    \item \pass = shortness in other suit
-    \item \rdbl = shortness in doubled suit
-\end{itemize}
-
-\subsubsection*{...
-                \\{\color{WildStrawberry}\textbf{ASK}\color{black}} -- (\dbl) -- P -- (P)
-                \\?}
-\dbl = lead directing
-\begin{itemize}
-    \item \pass = penalty
-    \item \rdbl = \lsf
+    \item \rdbl = no shortness
+    \item \pass = shortness in doubled suit
+    \item other suit = shortness in this suit
 \end{itemize}
 
 %%% SYSTEM END %%%
@@ -45,8 +36,8 @@
                 2\hearts -- (P) -- \alrts{2\spades} -- (3\clubs)\\
                 ?}
 \begin{itemize}
-    \item \pass = no shortness
-    \item \dbl = \clubs shortness
+    \item \dbl = no shortness
+    \item \pass = \clubs shortness
     \item 3\diams = \diams shortness
     \item 3\hearts = \spades shortness (as it is the only one left)
 \end{itemize}
