--- a/KrysiaBartek2024/source/preempt2nt.tex
+++ b/KrysiaBartek2024/source/preempt2nt.tex
@@ -159,9 +159,8 @@
 \subsubsection*{(2\spades) -- 2\nt -- (P) -- 4\diams \\
                 (P) -- 4\hearts -- (P) -- ?}
 \begin{itemize}
-    \item 4\spades = RKCB 1403
-    \item 4\nt = EX \spades \textbf{0314}
-    \item 5\clubs/5\diams = EX \textbf{0314}
+    \item 4\nt = RKCB 1403
+    \item 4\spades/5\clubs/5\diams = EX \textbf{0314}
 \end{itemize}
 
 %%% SYSTEM END %%%
