--- a/KrysiaBartek2024/source/twoSuitAgreeing.tex
+++ b/KrysiaBartek2024/source/twoSuitAgreeing.tex
@@ -46,6 +46,49 @@
     \item 5\diams = \soff
 \end{itemize}
 
+\subsubsection*{(3\clubs) -- ?}
+\begin{itemize}
+    \item 4\clubs = \diams+\major, \gf
+    \item 4\diams = \major, \gf
+\end{itemize}
+
+\subsubsection*{(3\clubs) -- 4\clubs -- (P) -- ?}
+\begin{itemize}
+    \item 4\diams = ASK \major
+    \item 4\hearts = agreeing \diams \vimp
+\end{itemize}
+
+\subsubsection*{(3\clubs) -- 4\diams -- (P) -- ?}
+\begin{itemize}
+    \item 4\hearts = \soff
+    \item 4\spades = \soff
+    \item 4\nt = agreeing \hearts
+    \item 5\clubs = agreeing \spades
+\end{itemize}
+
+\subsubsection*{(3\clubs) -- 4\clubs -- (P) -- 4\diams
+                \\(P) -- 4\hearts -- (P) -- ?}
+\begin{itemize}
+    \item \pass = \soff
+    \item 4\spades = agreeing \diams
+    \item 4\nt = agreeing \hearts
+    \item 5\diams = \soff
+\end{itemize}
+
+\subsubsection*{(3\clubs) -- 4\clubs -- (P) -- 4\diams
+                \\(P) -- 4\spades -- (P) -- ?}
+\begin{itemize}
+    \item \pass = \soff
+    \item 4\nt = agreeing \diams
+    \item 5\clubs = agreeing \spades
+    \item 5\diams = \soff
+\end{itemize}
+
+\subsubsection*{(3\diams) -- ?}
+\begin{itemize}
+    \item 4\clubs = \nat \imp
+\end{itemize}
+
 %%% SYSTEM END %%%
 
 
