--- a/KrysiaBartek2024/source/1MOpening.tex
+++ b/KrysiaBartek2024/source/1MOpening.tex
@@ -50,6 +50,40 @@
     \item 4\hearts = 11\hcp, 4\spades, no shortness
 \end{itemize}
 
+\subsubsection*{1\hearts -- 1\spades\\
+                2\hearts -- ?}
+\begin{itemize}
+    \item 2\nt = \invp art \vimp
+\end{itemize}
+
+\subsubsection*{1\hearts -- 1\spades\\
+                2\hearts -- 2\nt\\
+                ?}
+\begin{itemize}
+    \item 3\clubs = any minimum or \nat, \color{RedViolet}\textbf{F}\color{black}\ (3\diams = ask) \vimp
+    \item 3\diams = 4+\diams, max
+    \item 3\hearts = 7+\hearts, max (cue = agreeing \hearts)
+    \item 3\spades = 3+\spades, max
+\end{itemize}
+
+\subsubsection*{1\hearts -- 1\spades\\
+                2\hearts -- 2\nt\\
+                3\spades -- ?}
+\begin{itemize}
+    \item 4\clubs = agreeing \hearts
+    \item 4\diams = agreeing \spades
+\end{itemize}
+
+\subsubsection*{1\hearts -- 1\spades\\
+                2\hearts -- 2\nt\\
+                3\clubs -- 3\diams}
+\begin{itemize}
+    \item 3\hearts = min, no 3\spades
+    \item 3\spades = min, 3\spades
+    \item 3\nt = max, 4\clubs
+\end{itemize}
+
+
 %%% SYSTEM END %%%
 
 
