--- a/lib/bridge.sty
+++ b/lib/bridge.sty
@@ -7,6 +7,7 @@
 \subimport{}{envs.sty}
 \subimport{}{hands.sty}
 \subimport{}{sections.sty}
+\subimport{}{sequence.sty}
 
 \newcommand{\ntx}{{\small{NT}}}
 \newcommand{\hcp}{\textsc{hcp}\xspace}
