--- a/KrysiaBartek2024/source/1MOpening.tex
+++ b/KrysiaBartek2024/source/1MOpening.tex
@@ -60,7 +60,7 @@
                 2\hearts -- 2\nt\\
                 ?}
 \begin{itemize}
-    \item 3\clubs = any minimum or \nat, \color{RedViolet}\textbf{F}\color{black}\ (3\diams = ask) \vimp
+    \item 3\clubs = any minimum or \nat, \forc (\then 3\diams = ask) \vimp
     \item 3\diams = 4+\diams, max
     \item 3\hearts = 7+\hearts, max (cue = agreeing \hearts)
     \item 3\spades = 3+\spades, max
