--- a/KrysiaBartek2024/source/1mOpening.tex
+++ b/KrysiaBartek2024/source/1mOpening.tex
@@ -107,7 +107,7 @@
 \subsubsection*{1\diams -- 1\hearts\\
                 2\diams -- ?}
 \begin{itemize}
-    \item 2\spades = \gf art ($\rightarrow$ all \nat) \vimp
+    \item 2\spades = \gf art (\then all \nat) \vimp
     \item 2\nt = \inv art, \fton{3\diams} \vimp
 \end{itemize}
 
