--- a/lib/bridge.sty
+++ b/lib/bridge.sty
@@ -15,6 +15,7 @@
 \newcommand{\unbal}{\st{\textsc{bal}}\xspace}
 \newcommand{\gf}{\color{BrickRed}\textbf{GF}\color{black}\xspace}
 \newcommand{\nf}{\color{Green}\textbf{NF}\color{black}\xspace}
+\newcommand{\forc}{\color{RedViolet}\textbf{F}\color{black}\xspace}
 \newcommand{\fonce}{\color{RedViolet}\textbf{F1}\color{black}\hspace{4pt}\xspace}
 \newcommand{\fton}[1]{\color{RedViolet}\textbf{F}\color{black}\xspace to {#1}}
 \newcommand{\trsf}[1]{\textsc{trsf}\xspace to {#1}}
@@ -47,6 +48,7 @@
 \newcommand{\anysuit}[1]{\color{PineGreen}{\textbf{{#1}}}\color{black}\xspace}
 \newcommand{\mins}{\textbf{m}\xspace}
 \newcommand{\majs}{\textbf{\small{M}}\xspace}
+\newcommand{\then}{$\rightarrow$\xspace}
 
 % Provide 2 suits as arguments, ex. \twosuit{\spades}{\diams}.
 % The command will produce suit characters slightly overlapped.
