--- a/KrysiaBartek2024/source/1MOpening.tex
+++ b/KrysiaBartek2024/source/1MOpening.tex
@@ -4,14 +4,15 @@
 \import{../../lib/}{bridge.sty}
 \setmainlanguage{english}
 
-\title{1\majs\ opening}
+\title{1\major\ opening}
 \author{Krystyna Gasińska, Bartek Słupik}
 \begin{document}
 \maketitle
 
 %%% ID: 23
 %%% PRIORITY: 10
-%%% TITLE: 1\majs\ opening
+%%% SECTION: oneside
+%%% TITLE: 1{\color{Maroon}\ding{170}\hspace{-3pt}\color{Blue}\ding{171}}\ opening
 %%% SYSTEM BEGIN %%%
 
 \subsubsection*{1\hearts -- ?}
@@ -30,6 +31,7 @@
     \item 3\nt = splinter \diams
     \item 4\clubs = splinter \clubs
     \item 4\diams = 11\hcp, 4\hearts, no shortness
+    \item 4\spades/5\clubs/5\diams = EXRKCB 0314
 \end{itemize}
 
 \subsubsection*{1\spades -- ?}
