--- a/KrysiaBartek2024/source/1mOpening.tex
+++ b/KrysiaBartek2024/source/1mOpening.tex
@@ -4,26 +4,27 @@
 \import{../../lib/}{bridge.sty}
 \setmainlanguage{english}
 
-\title{1\mins\ opening}
+\title{1\minor opening}
 \author{Krystyna Gasińska, Bartek Słupik}
 \begin{document}
 \maketitle
 
 %%% ID: 1
 %%% PRIORITY: 5
-%%% TITLE: 1\mins\ opening
+%%% SECTION: oneside
+%%% TITLE: 1{\color{OliveGreen}\ding{168}\hspace{-3pt}\color{BurntOrange}\ding{169}}\ opening
 %%% SYSTEM BEGIN %%%
 
 \subsubsection*{1\clubs\ -- ?}
 \begin{itemize}
-    \item 1\diams\ = 0-6
+    \item 1\diams\ = negative
     \item 1\hearts\ = 4+\hearts
     \item 1\spades\ = 4+\spades
-    \item 1\ntx\ = 7-10, no 4\majs
+    \item 1\nt = 7-10, no 4\major
     \item 2\clubs\ = \gf: \bal or \clubs
-    \item 2\diams\ = 5+\diams, \gf, may have 4\majs
+    \item 2\diams\ = 5+\diams, \gf, may have 4\major
     \item 2\hearts\ = 5\spades4\hearts\ 6-9
-    \item 2\spades\ = 11+ \bal, no 4\majs
+    \item 2\spades\ = 11+ \bal, no 4\major
     \item 2\ntx\ = 11-12 \bal
     \item 3\nt\ = 15-17 \bal
 \end{itemize}
@@ -32,18 +33,19 @@
 \begin{itemize}
     \item 1\hearts\ = 4+\hearts
     \item 1\spades\ = 4+\spades
-    \item 1\ntx\ = 6-10, no 4\majs, no \diams\ support
-    \item 2\clubs\ = 12-14 \bal or \clubs, \gf
-    \item 2\diams\ = no 4\majs, 4+\diams, \invp
-    \item 2\hearts\ = 5\spades4\hearts\ 6-9
-    \item 2\spades\ = 11+ \bal, no 4\majs
-    \item 2\ntx\ = 11-12 \bal
-    \item 3\nt\ = 15-17 \bal
+    \item 1\nt = 6-10, no 4\major
+    \item 2\clubs\ = \gf: \bal or \clubs, no 4\major
+    \item 2\diams\ = no 4\major, 4+\diams, \invp
+    \item 2\hearts\ = 5\spades4\hearts\ 5-11
+    \item 2\spades\ = 11+ \bal, no 4\major
+    \item 2\nt = 11-12 \bal
+    \item 3\nt = 15-17 \bal
 \end{itemize}
 
 \subsubsection*{1\clubs\ -- 1\hearts/1\spades \\ ?}
 \begin{itemize}
-    \item 2\clubs = 5+\clubs, 12-15, \unbal
+    \item 2\clubs = 5+\clubs, 12-15 \unbal
+    \item 3\clubs = 6+\clubs, (15)16-18, \unbal
 \end{itemize}
 
 \subsubsection*{1\clubs\ -- 1\hearts \\ 
