--- a/KrysiaBartek2024/source/2ntOpening.tex
+++ b/KrysiaBartek2024/source/2ntOpening.tex
@@ -11,10 +11,11 @@
 
 %%% ID: 4
 %%% PRIORITY: 80
+%%% SECTION: oneside
 %%% TITLE: 2\ntx\ opening
 %%% SYSTEM BEGIN %%%
 
-\alrts{2\nt} opening = 21-22 \bal, may have 5\majs
+\alrts{2\nt} opening = 21-22 \bal, may have 5\major
 
 \subsubsection*{2\ntx\ -- ?}
 \begin{itemize}
@@ -23,17 +24,16 @@
     \item 3\hearts\ = forces 3\spades, \gf
     \item 3\spades\ = forces 3\nt
     \item 3\nt\ = 5\spades4\hearts, \nf \imp
-    \item 4\clubs\ = 55 \majs
+    \item 4\clubs\ = 55 \major
     \item 4\diams, 4\hearts\ = Texas
     \item 4\nt\ = quantitative
 \end{itemize}
 
-% should 3s and 3nt be switched?
 \subsubsection*{2\ntx\ -- 3\diams \\ ?}
 \begin{itemize}
     \item 3\hearts\ =2\hearts
     \item 3\spades\ = 4+\hearts, cue bid
-    \item 3\nt\ =3\spades
+    \item 3\nt\ = 3\spades
     \item 4\clubs, 4\diams\ = 4+\hearts, cue bid
 \end{itemize}
 
