--- a/KrysiaBartek2024/source/RKCBinterference.tex
+++ b/KrysiaBartek2024/source/RKCBinterference.tex
@@ -15,6 +15,7 @@ DEPO = double even, pass odd
 
 %%% ID: 33
 %%% PRIORITY: 500
+%%% SECTION: competitive
 %%% TITLE: RKCB -- dealing with interference
 %%% SYSTEM BEGIN %%%
 
