--- a/KrysiaBartek2024/source/dealingWithMulti.tex
+++ b/KrysiaBartek2024/source/dealingWithMulti.tex
@@ -11,12 +11,13 @@
 
 %%% ID: 7
 %%% PRIORITY: 400
+%%% SECTION: defensive
 %%% TITLE: Dealing with Multi/Wilkosz
 %%% SYSTEM BEGIN %%%
 
 \subsubsection*{(2\diams) -- ?}
 \begin{itemize}
-    \item \dbl = (13)14-16 \bal, no 5\majs, may have minor singleton \vimp
+    \item \dbl = (13)14-16 \bal, no 5\major, may have minor singleton \vimp
     \item 2\hearts = 11-15, 5+\hearts
     \item 2\spades = 11-15, 5+\spades
     \item 2\nt = 17-19, \bal
@@ -73,7 +74,7 @@ System like after 2\diams preempt.
                 (P) -- 3\clubs -- (P) -- ?}        
 \begin{itemize}
     \item \pass = to play
-    \item 3\diams = \gf, no 4\majs \vimp
+    \item 3\diams = \gf, no 4\major \vimp
     \item 3\hearts, 3\spades = \inv
 \end{itemize}
 
