--- a/KrysiaBartek2024/source/drury.tex
+++ b/KrysiaBartek2024/source/drury.tex
@@ -11,22 +11,23 @@
 
 %%% ID: 9
 %%% PRIORITY: 90
+%%% SECTION: oneside
 %%% TITLE: Drury
 %%% SYSTEM BEGIN %%%
 
 {\textbf{OFF}} in competition
 
-\subsubsection*{P -- 1\majs \\ ?}
+\subsubsection*{P -- 1\major \\ ?}
 \begin{itemize}
     \item 1\nt = 8-11, no fit
     \item 2\clubs = 4-fit mixed raise (7)8-10\dps OR 3-fit (9)10-11\dps
-    \item 2\majs = 3-fit, 4-8\dps
+    \item 2\major = 3-fit, 4-8\dps
     \item 2\anysuit{x} = (9)10, solid 5\anysuit{x}
     \item 3\clubs = (9)10, \inv, 6\clubs
     \item 3\anysuit{x} = 4-fit, solid 5\anysuit{x}
     \item 2\nt = 4-fit, solid 5\clubs
-    \item 3\majs = 5-fit 4-6\dps (or 4 with shortness)
-    \item 3\nt over 1\spades (3\spades over 1\hearts) = Two Tiered Splinters = 4+\majs, unspecified singleton, (10)11\dps
+    \item 3\major = 5-fit 4-6\dps (or 4 with shortness)
+    \item 3\nt over 1\spades (3\spades over 1\hearts) = Two Tiered Splinters = 4+\major, unspecified singleton, (10)11\dps
     \item 4\clubs/4\diams/4\hearts = void splinter
 \end{itemize}
 
@@ -50,18 +51,18 @@
     \item 4\spades = to play
 \end{itemize}
 
-\subsubsection*{P -- 1\majs \\ 2\clubs -- 2\majs \\ ?}
+\subsubsection*{P -- 1\major \\ 2\clubs -- 2\major \\ ?}
 \begin{itemize}
-    \item 3\anysuit{x} = \nat, unspecified singleton, +4-fit \majs support
+    \item 3\anysuit{x} = \nat, unspecified singleton, +4-fit \major support
 \end{itemize}
 
-\subsubsection*{P -- 1\majs \\ 2\clubs -- 2\diams \\ ?}
+\subsubsection*{P -- 1\major \\ 2\clubs -- 2\diams \\ ?}
 \begin{itemize}
     \item 2\hearts over 2\spades = Last Train (says nothing about \hearts)
-    \item 2\majs = \soff
+    \item 2\major = \soff
     \item 2\nt = 11, \bal
-    \item 3\majs = 4-card support
-    \item 4\majs = to play
+    \item 3\major = 4-card support
+    \item 4\major = to play
     \item any other bid = \nat, \inv
 \end{itemize}
 
