--- a/KrysiaBartek2024/source/ovecallsAfter2nt.tex
+++ b/KrysiaBartek2024/source/ovecallsAfter2nt.tex
@@ -24,6 +24,7 @@ Do not overcall with:\\
 
 %%% ID: 14
 %%% PRIORITY: 350
+%%% SECTION: defensive
 %%% TITLE: Overcalls after 2\ntx\ opening
 %%% SYSTEM BEGIN %%%
 
