--- a/KrysiaBartek2024/source/preempt2nt.tex
+++ b/KrysiaBartek2024/source/preempt2nt.tex
@@ -11,12 +11,13 @@
 
 %%% ID: 15
 %%% PRIORITY: 300
+%%% SECTION: defensive
 %%% TITLE: 2\ntx\ overcall after major preempt
 %%% SYSTEM BEGIN %%%
 
-\subsubsection*{(2\majs) -- ?}
+\subsubsection*{(2\major) -- ?}
 \begin{itemize}
-    \item 2\nt\ = 16-18 \bal, promises \majs\ stopper
+    \item 2\nt\ = 16-18 \bal, promises \major\ stopper
 \end{itemize}
 
 \subsubsection*{(2\hearts) -- 2\nt -- (P) -- ?}
