--- a/KrysiaBartek2024/source/rebid3card.tex
+++ b/KrysiaBartek2024/source/rebid3card.tex
@@ -58,6 +58,7 @@ Be even more aggressive in competition. Use opponents' suit to show shortness + 
 
 %%% ID: 17
 %%% PRIORITY: 147
+%%% SECTION: oneside
 %%% TITLE: Rebid with 3-card support
 %%% SYSTEM BEGIN %%%
 
