--- a/KrysiaBartek2024/source/reverses.tex
+++ b/KrysiaBartek2024/source/reverses.tex
@@ -11,6 +11,7 @@
 
 %%% ID: 18
 %%% PRIORITY: 100
+%%% SECTION: oneside
 %%% TITLE: Reverses, jump shifts and jump reverses
 %%% SYSTEM BEGIN %%%
 
@@ -35,7 +36,7 @@
     \item (16)17+ 4-5 distribution
     \item first suit always longer (with 5-5 we open higher suit)
     \item do not jump above a reverse to show extra values
-    \item jump rebid of a minor denies 4\majs\ \vimp
+    \item jump rebid of a minor denies 4\major\ \vimp
 \end{itemize}
 
 \section{Jump shift}
@@ -78,7 +79,7 @@
     \item
         \chandp{K7}{AQ32}{AQJT96}{3}{16}
         Open 1\diams\ and rebid 2\hearts. Remember that jump rebid of a minor 
-        denies 4\majs.
+        denies 4\major.
     \item 
         \chandp{7}{AQT42}{2}{AKQT63}{15}
         Open 1\clubs, rebid 2\hearts\ and then bid again to show 5th \hearts.
