--- a/KrysiaBartek2024/source/michaels&unusual2nt.tex
+++ b/KrysiaBartek2024/source/michaels&unusual2nt.tex
@@ -74,6 +74,7 @@ With middle hands also bid Michaels:\\
 
 %%% ID: 24
 %%% PRIORITY: 97
+%%% SECTION: defensive
 %%% TITLE: Michaels \textit{\&} Unusual 2\nt
 %%% SYSTEM BEGIN %%%
 
