--- a/KrysiaBartek2024/source/transfers1MX.tex
+++ b/KrysiaBartek2024/source/transfers1MX.tex
@@ -4,14 +4,15 @@
 \import{../../lib/}{bridge.sty}
 \setmainlanguage{english}
 
-\title{Transfers after 1\majs\ (\dbl)}
+\title{Transfers after 1\major\ (\dbl)}
 \author{Krystyna Gasińska, Bartek Słupik\\based on Eric Kokish' system}
 \begin{document}
 \maketitle
 
 %%% ID: 19
 %%% PRIORITY: 205
-%%% TITLE: Transfers after 1\majs\ (\dbl)
+%%% SECTION: competitive
+%%% TITLE: Transfers after 1\major\ (\dbl)
 %%% SYSTEM BEGIN %%%
 
 \subsubsection*{1\hearts -- (\dbl) -- ?}
