--- a/KrysiaBartek2024/source/1MOpening.tex
+++ b/KrysiaBartek2024/source/1MOpening.tex
@@ -78,11 +78,26 @@
 
 \subsubsection*{1\hearts -- 1\spades\\
                 2\hearts -- 2\nt\\
+                3\clubs/3\diams -- ?}
+\begin{itemize}
+    \item 3\spades = agreeing \spades, \gf
+\end{itemize}
+
+\subsubsection*{1\hearts -- 1\spades\\
+                2\hearts -- 2\nt\\
                 3\clubs -- 3\diams}
 \begin{itemize}
     \item 3\hearts = min, no 3\spades
     \item 3\spades = min, 3\spades
     \item 3\nt = max, 4\clubs
+\end{itemize}
+
+\subsubsection*{1\hearts -- 1\spades\\
+                2\hearts -- 2\nt\\
+                (3\clubs -- 3\diams)\\
+                3\hearts -- ?}
+\begin{itemize}
+    \item 3\spades = agreeing \hearts, \lsf
 \end{itemize}
 
 
