--- a/KrysiaBartek2024/source/otherBidsAndRules.tex
+++ b/KrysiaBartek2024/source/otherBidsAndRules.tex
@@ -188,9 +188,27 @@ minors or 3\clubs\ to show clubs.
 
 (2\diams$^\text{6\major}$) -- 4\clubs
 
-
-
 \end{itemize}
 
+\subsubsection*{How to invite?}
+\begin{enumerate}
+    \item {
+        1\spades -- (2\clubs) -- 2\spades -- (3\clubs)\\
+        ?\\
+        As there are two suits available, bidding either of them is a natural
+        invite. Double is penalty.
+    }
+    \item {
+        1\spades -- (2\diams) -- 2\spades -- (3\diams)\\
+        ?\\
+        There is only one suit available, so bidding it is an artificial invite.
+        Double is penalty.
+    }
+    \item {
+        1\spades -- (2\hearts) -- 2\spades -- (3\hearts)\\
+        ?\\
+        There is no inviting suit. Double is invite.
+    }
+\end{enumerate}
 
 \end{document}
