--- a/KrysiaBartek2024/source/minorPuppet.tex
+++ b/KrysiaBartek2024/source/minorPuppet.tex
@@ -12,7 +12,7 @@
 %%% ID: 26
 %%% PRIORITY: 83
 %%% SECTION: oneside
-%%% TITLE: 2\nt opening -- extended
+%%% TITLE: 2\ntx\ opening -- extended
 %%% SYSTEM BEGIN %%%
 
 \subsubsection*{2\nt -- 3\clubs\\
