--- a/KrysiaBartek2024/source/preemptOpening.tex
+++ b/KrysiaBartek2024/source/preemptOpening.tex
@@ -20,7 +20,7 @@
     \item 2\nt = OGUST (after 2\diams only!)
 \end{itemize}
 
-\subsubsection*{2\diams -- 2\diams \\ ?}
+\subsubsection*{2\diams -- 2\nt \\ ?}
 \begin{itemize}
     \item 3\clubs = 5-7, bad \diams quality
     \item 3\diams = 5-7, good \diams quality
@@ -32,11 +32,27 @@
 \begin{itemize}
     \item 2\spades = \lsf
     \item 2\nt = 5+\spades
+    \item 3\clubs = \clubs/\diams \gf
+    \item 3\diams = \inv to 3\nt
 \end{itemize}
 
 \subsubsection*{2\spades -- ?}
 \begin{itemize}
     \item 2\nt = \lsf
+    \item 3\clubs = \clubs/\diams \gf
+    \item 3\diams = \inv to 3\nt
+\end{itemize}
+
+\subsubsection*{2\hearts/2\spades -- 3\clubs \\ ?}
+\begin{itemize}
+    \item 3\diams = 2+\clubs 2+\diams
+    \item 3\hearts = 1-\clubs
+    \item 3\spades = 1-\diams
+\end{itemize}
+
+\subsubsection*{2\hearts/2\spades -- 3\diams \\ ?}
+\begin{itemize}
+    \item 3OM = accept
 \end{itemize}
 
 %%% SYSTEM END %%%
