--- a/KrysiaBartek2024/source/preemptOpening.tex
+++ b/KrysiaBartek2024/source/preemptOpening.tex
@@ -55,6 +55,11 @@
     \item 3OM = accept
 \end{itemize}
 
+\subsubsection*{2\anysuit{x} -- ?}
+\begin{itemize}
+    \item 4\clubs = RKCB 0/1-Q/1+Q/2-Q/2+Q
+\end{itemize}
+
 %%% SYSTEM END %%%
 
 
