--- a/KrysiaBartek2024/source/1MOpening.tex
+++ b/KrysiaBartek2024/source/1MOpening.tex
@@ -18,7 +18,7 @@
 \subsubsection*{1\hearts -- ?}
 \begin{itemize}
     \item 1\spades = 4+\spades, no 3\hearts OR 5\spades3\hearts + \gf
-    \item 1\nt = 5-11\hcp, (or 5-7\hcp with \hearts fit)
+    \item 1\nt = 5-11\hcp, (or 5-7\hcp with 2-3 \hearts)
     \item 2\clubs = any \gf
     \item 2\diams = 5\diams, \gf
     \item 2\hearts = constructive raise
@@ -36,7 +36,7 @@
 
 \subsubsection*{1\spades -- ?}
 \begin{itemize}
-    \item 1\nt = 5-11\hcp, (or 5-7\hcp with \spades fit)
+    \item 1\nt = 5-11\hcp, (or 5-7\hcp with 2-3 \spades)
     \item 2\clubs = any \gf
     \item 2\diams = 5\diams, \gf
     \item 2\hearts = 5\hearts, \gf
