--- a/KrysiaBartek2024/source/2ntOpening.tex
+++ b/KrysiaBartek2024/source/2ntOpening.tex
@@ -17,11 +17,11 @@
 
 \alrts{2\nt} opening = 21-22 \bal, may have 5\major
 
-\subsubsection*{2\ntx\ -- ?}
+\subsubsection*{2\nt -- ?}
 \begin{itemize}
     \item 3\clubs\ = Puppet Stayman
-    \item 3\diams\ = forces 3\hearts, \gf
-    \item 3\hearts\ = forces 3\spades, \gf
+    \item 3\diams\ = \then \hearts + superaccepts
+    \item 3\hearts\ = \then \spades + superaccepts
     \item 3\spades\ = forces 3\nt
     \item 3\nt\ = 5\spades4\hearts, \nf \imp
     \item 4\clubs\ = 55 \major
@@ -31,7 +31,7 @@
 
 \subsubsection*{2\ntx\ -- 3\diams \\ ?}
 \begin{itemize}
-    \item 3\hearts\ =2\hearts
+    \item 3\hearts\ = 2\hearts
     \item 3\spades\ = 4+\hearts, cue bid
     \item 3\nt\ = 3\spades
     \item 4\clubs, 4\diams\ = 4+\hearts, cue bid
@@ -39,8 +39,8 @@
 
 \subsubsection*{2\ntx\ -- 3\hearts \\ ?}
 \begin{itemize}
-    \item 3\spades\ =2\spades
-    \item 3\nt\ =3\spades
+    \item 3\spades\ = 2\spades
+    \item 3\nt\ = 3\spades
     \item 4\clubs, 4\diams\ = 4+\spades, cue bid
 \end{itemize}
 
