--- a/KrysiaBartek2024/source/2over1.tex
+++ b/KrysiaBartek2024/source/2over1.tex
@@ -30,7 +30,7 @@
 \subsubsection*{\anysuit{x} -- 2\anysuit{y} 
                 \\ 2\nt -- 3\clubs \\ ?}
 \begin{itemize}
-    \item 3\diams = 3\anysuit{y}
+    \item 3\diams = 3\anysuit{y} \imp
     \item other = denies 3\anysuit{y}
 \end{itemize}
 
