--- a/KrysiaBartek2024/source/askLSF.tex
+++ b/KrysiaBartek2024/source/askLSF.tex
@@ -15,11 +15,9 @@
 %%% TITLE: Ask LSF
 %%% SYSTEM BEGIN %%%
 
-\subsubsection*{All basic ASK LSF sequences:}
+\subsubsection*{Basic ASK LSF sequences:}
 \begin{itemize}
     \item 1\major\ -- 2\major\ \\ \alrts{2\major+1}
-    \item 1\minor\ -- 1\major\ \\ 2\major\ -- \alrts{2\major+1}
-    \item 1\major\ -- 2\anysuit{x} \\ 2\major\ -- \alrts{2\major+1}
     \item 1\minor\ -- 1\major \\ 3\major\ -- \alrts{3\major+1}
 \end{itemize}
 
