--- a/KrysiaBartek2024/source/1mOpening.tex
+++ b/KrysiaBartek2024/source/1mOpening.tex
@@ -45,7 +45,7 @@
 \subsubsection*{1\clubs\ -- 1\hearts/1\spades \\ ?}
 \begin{itemize}
     \item 2\clubs = 5+\clubs, 12-15 \unbal
-    \item 3\clubs = 6+\clubs, (15)16-18, \unbal
+    \item 3\clubs = 6+\clubs, (15)16-18 \unbal
 \end{itemize}
 
 \subsubsection*{1\clubs\ -- 1\hearts \\ 
@@ -192,7 +192,7 @@ bidding higher suit denies lower stopper
 
 \subsubsection*{1\minor\ -- 2\hearts \\ ?}
 \begin{itemize}
-    \item 2\nt\ = \lsf
+    \item 2\nt\ = \lsf \vimp
 \end{itemize}
 
 \subsubsection*{1\clubs\ -- 2\spades \\ ?}
