--- a/KrysiaBartek2024/source/1MOpening.tex
+++ b/KrysiaBartek2024/source/1MOpening.tex
@@ -85,7 +85,8 @@
 
 \subsubsection*{1\hearts -- 1\spades\\
                 2\hearts -- 2\nt\\
-                3\clubs -- 3\diams}
+                3\clubs -- 3\diams\\
+                ?}
 \begin{itemize}
     \item 3\hearts = min, no 3\spades
     \item 3\spades = min, 3\spades
