--- a/KrysiaBartek2024/source/dealingWithPreempts.tex
+++ b/KrysiaBartek2024/source/dealingWithPreempts.tex
@@ -38,7 +38,7 @@
 \end{itemize}
 
 \subsubsection*{(2\hearts) -- \dbl -- (P) -- 2\nt \\
-                (P) -- 3\mins -- (P) -- ?}
+                (P) -- 3\minor -- (P) -- ?}
 \begin{itemize}
     \item 3\diams = weak
     \item 3\hearts = 4\spades, no \hearts stopper
@@ -71,7 +71,7 @@
 \end{itemize}
 
 \subsubsection*{(2\spades) -- \dbl -- (P) -- 2\nt \\
-                (P) -- 3\mins -- (P) -- ?}
+                (P) -- 3\minor -- (P) -- ?}
 \begin{itemize}
     \item 3\hearts/3\diams = to play
     \item 3\spades = 4\hearts, no \spades stopper
