--- a/KrysiaBartek2024/source/1mOpening.tex
+++ b/KrysiaBartek2024/source/1mOpening.tex
@@ -21,7 +21,7 @@
     \item 1\hearts\ = 4+\hearts
     \item 1\spades\ = 4+\spades
     \item 1\nt = 7-10, no 4\major
-    \item 2\clubs\ = \gf: \bal or \clubs
+    \item 2\clubs\ = \gf
     \item 2\diams\ = 5+\diams, \gf, may have 4\major
     \item 2\hearts\ = 5\spades4\hearts\ 6-9
     \item 2\spades\ = 11+ \bal, no 4\major
@@ -34,7 +34,7 @@
     \item 1\hearts\ = 4+\hearts
     \item 1\spades\ = 4+\spades
     \item 1\nt = 6-10, no 4\major
-    \item 2\clubs\ = \gf: \bal or \clubs, no 4\major
+    \item 2\clubs\ = \gf, no 4\major
     \item 2\diams\ = no 4\major, 4+\diams, \invp
     \item 2\hearts\ = 5\spades4\hearts\ 5-11
     \item 2\spades\ = 11+ \bal, no 4\major
@@ -51,53 +51,16 @@
 \subsubsection*{1\clubs\ -- 1\hearts \\ 
                 2\clubs -- ?}
 \begin{itemize}
-    \item 2\diams = \inv art \vimp
-    \item 2\spades/2\nt = \gf
-\end{itemize}
-
-\subsubsection*{1\clubs\ -- 1\hearts \\ 
-                2\clubs -- 2\diams\\
-                ?}
-\begin{itemize}
-    \item 2\hearts = 3+\hearts, \fonce
-    \item 2\spades = \gf
-    \item 2\nt = 3145, \nf (3\diams to play)
-    \item 3\clubs = \nat, \nf
+    \item 2\diams = \gf (\then all \nat)
+    \item 2\spades/2\nt = \inv art (bids above 3\clubs = accept)
 \end{itemize}
 
 \subsubsection*{1\clubs\ -- 1\spades \\ 
                 2\clubs -- ?}
 \begin{itemize}
-    \item 2\diams = \inv art or 5\spades4\hearts \gf \vimp
-    \item 2\hearts = \gf art, no 4\hearts \vimp
-    \item 2\nt = \gf
-\end{itemize}
-
-\subsubsection*{1\clubs\ -- 1\spades \\ 
-                2\clubs -- 2\diams\\
-                ?}
-\begin{itemize}
-    \item 2\hearts = \nat, \fonce
-    \item 2\spades = 3+\spades, \fonce
-    \item 2\nt = 3145, \nf (3\diams to play)
-    \item 3\clubs = \nat, \nf
-    \item 3\diams = \gf art\vimp
-\end{itemize}
-
-\subsubsection*{1\clubs\ -- 1\spades \\ 
-                2\clubs -- 2\diams\\
-                2\hearts/2\spades -- ?}
-\begin{itemize}
-    \item 3\diams = agreeing \hearts/\spades, \gf
-\end{itemize}
-
-\subsubsection*{1\clubs\ -- 1\spades \\ 
-                2\clubs -- 2\diams\\
-                2\nt/3\clubs -- ?}
-\begin{itemize}
-    \item 3\hearts = 5\spades5\hearts, \gf
-    \item 3\spades = 6\spades4\hearts, \gf
-    \item 3\nt = 5\spades4\hearts, \gf
+    \item 2\diams = \gf
+    \item 2\hearts = \inv \nat
+    \item 2\nt = \inv (bids above 3\clubs = accept)
 \end{itemize}
 
 \subsubsection*{1\diams -- 1\hearts\\ ?}
@@ -131,7 +94,7 @@
                 2\diams -- ?}
 \begin{itemize}
     \item 2\hearts = \gf art \vimp
-    \item 2\nt = \inv art, \fton{3\diams} \vimp
+    \item 2\nt = \inv art, \fton{3\diams}
 \end{itemize}
 
 \subsubsection*{1\diams -- 1\spades\\
